--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ ___*
 
 # Build artifacts
 build/
-builds/
 build-*/
 fakeroot/
 tests-results/
@@ -19,10 +18,11 @@ deb-output/
 .idea/
 aws_sdk*.log
 cmake-build-*
-cmake-release-*
 
 # Visual Studio
-\.vscode/
+.vscode
+*.swp
+/.vs
 
 # Merge files
 *.orig
