Sample browser app.

--- a/apps/SampleAnnounce/CMakeLists.txt
+++ b/apps/SampleAnnounce/CMakeLists.txt
@@ -16,11 +16,11 @@
 # along with this library; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-project(AnnounceServer)
+project(SampleAnnounce)
 
 message("Test App config")
 
-set(TESETAPP_SOURCES AnnounceServer.cpp)
+set(TESETAPP_SOURCES SampleAnnounce.cpp)
 
 # video plugin
 #link_directories("/home/dslocal/Work/CLion/Servus/cmake-build-debug/lib")
@@ -31,14 +31,14 @@ set(TESETAPP_SOURCES AnnounceServer.cpp)
 #include_directories (C:/Users/dslocal/Documents/Work/Git/Servus/cmake-build-debug/include)
 #include_directories (C:/Users/dslocal/Documents/Work/Git/Servus/servus)
 
-add_executable(AnnounceServer
+add_executable(SampleAnnounce
         ${TESETAPP_SOURCES}
         )
 
-#set_target_properties(AnnounceServer PROPERTIES
+#set_target_properties(SampleAnnounce PROPERTIES
 #        CXX_STANDARD 14
 #        )
 
-target_link_libraries(AnnounceServer Servus)
+target_link_libraries(SampleAnnounce Servus)
 
-#common_application(AnnounceServer GUI NOHELP)
+#common_application(SampleAnnounce GUI NOHELP)
